--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aptos-labs/ts-sdk": "^4.0.0",
+    "@aptos-labs/wallet-adapter-react": "^7.0.4",
     "@formatjs/intl-localematcher": "0.5.7",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/postcss": "^4.1.11",
