--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@formatjs/intl-localematcher": "0.5.7",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/typography": "^0.5.16",
     "heroicons": "^2.2.0",
     "kbar": "0.1.0-beta.48",
     "negotiator": "1.0.0",
@@ -23,6 +24,12 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "rehype-add-classes": "^1.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
     "tailwindcss": "^4.1.11",
     "vazirmatn": "^33.0.3"
   },
